Updated 'Get My Location' button; fixed issue with comparisons not showing up

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -47,7 +47,6 @@ body.result-page {
 .button-disabled {
   background: #fff !important;
   color: #999 !important;
-  cursor: none;
   transition: all 0.2s ease;
 }
 
